--- a/TrabajoFinal_Grupo18/src/main/resources/templates/pagEmpleador.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/pagEmpleador.html
@@ -9,15 +9,14 @@
 <body>
    <header th:replace="/layouts/headerEmp::headerEmp"></header> 
 
-       <div class="card bg-dark text-white">
-  <img th:src="@{/images/img.jpg}" class="card-img" alt="fondo" height="300px">
-  <div class="card-img-overlay">
-    <h2 class="card-title">OFERTAS LABORALES</h2>
-    <h4 class="centraar">Bienvenido/a!!</h4> 
-    <p class="card-text"> Gracias por su registro. Este es el mejor sitio para tu empresa.<br>
-     Podras publicar tus empleos y capacitaciones en alguna de las opciones.</p>
-  </div>
-</div>
+    <div class="container centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> BIENVENIDO/A </h1>
+    </div>   
+   </div>
+    <h4 class="container centraar"> Gracias por su registro. Este es el mejor sitio para tu empresa.<br>
+     Podras publicar tus empleos y capacitaciones en alguna de las opciones.</h4>
+ 
   <section>
    <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
