--- a/TrabajoFinal_Grupo18/src/main/resources/static/css/style.css
+++ b/TrabajoFinal_Grupo18/src/main/resources/static/css/style.css
@@ -15,6 +15,7 @@ p{
 	text-align: center;
 	
 }
+
 button{
 	font-family: cursive;
 }
@@ -22,9 +23,10 @@ section{
 	margin: 40px;
 }
 h1{
-	font-size: 50px;
-	font-family: cursive;
-	margin-top: 80px;
+	font-size: 70px;
+	font-weight: 600;
+	font-family: serif;
+	margin: 30px;
 	text-align: center;
 	
 }
