--- a/TrabajoFinal_Grupo18/src/main/resources/templates/misEmpleos.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/misEmpleos.html
@@ -9,12 +9,19 @@
 <body>
    <header th:replace="/layouts/headerEmp::headerEmp"></header> 
    <div class="row justify-content-center">
-      <a th:href="@{/empleador/solicitudes}" id="eeempleo" type="button" class="btn btn-dark">VER SOLICITUDES</a>         
+             
    
     <div class="col-md-10 ">
-    <h2> Mis ofertas </h2>
-     <a th:href="@{/empleador/crearEmpleo}" id="empleo" type="button" class="btn btn-info">Nuevo empleo</a>
-     <table class="table table-success table-striped">
+   <div class="container centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> Mis Ofertas </h1>
+    </div>
+    </div>
+        <div class="container centraar">
+      <a th:href="@{/empleador/solicitudes}" id="eeempleo" type="button" class="btn btn-dark">VER SOLICITUDES</a> 
+     <a th:href="@{/empleador/crearEmpleo}" id="empleo" type="button" class="btn btn-secondary">NUEVO EMPLEO</a> 
+     </div>
+     <table class="table table-success table-striped centraar">
      <tr>
   					<th >CANTIDAD VACANTES</th>
   					<th >PUESTO REQUERIDOS</th>
@@ -42,7 +49,7 @@
 					  <span th:if="${o.disponible == false }" th:text="'No'"></span></td>
 					 <td> 
 					   <a th:href="@{#}" id="edit" type="button" class="btn btn-dark">Editar</a>
-					   <a th:href="@{#}" id="elim" type="button" class="btn btn-danger">Eliminar</a>
+					   <a th:href="@{#}" id="elim" type="button" class="btn btn-primary">Eliminar</a>
 					  </td>
  				</tr>
      </table>
