--- a/TrabajoFinal_Grupo18/src/main/resources/templates/solicitudes.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/solicitudes.html
@@ -12,7 +12,11 @@
    
     <div class="row justify-content-center">
     <div class="col-md-11 ">
-    <h2> Solicitudes</h2>
+    <div class="container centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> Solicitudes</h1>
+    </div>
+    </div>
     <table class="table table-success table-striped">
      <tr>
   					<th > Nombre y Apellido </th>
@@ -32,7 +36,7 @@
                 <td th:text="${ls.fecha}"></td>
                 <td th:text="${ls.estado}"></td>
                 <td >
-                                      <a th:href="@{#}" id="cv" type="button" class="btn btn-link">Ver Cv</a>         
+                                      <a th:href="@{/empleador/verCv?id={id}(id=${ls.cv.id})}" id="cv" type="button" class="btn btn-link">Ver Cv</a>         
                  </td>
                 <td> 
                       <a th:href="@{/empleador/aceptarSoli/}+${ls.id}" id="aceptarSoli" type="button" class="btn btn-primary">Aceptar</a>         
