filtrado por fecha y algunos cambios en la apariencia

--- a/TrabajoFinal_Grupo18/src/main/resources/templates/cursosInscripciones.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/cursosInscripciones.html
@@ -11,9 +11,15 @@
 
     <div class="row justify-content-center">
     <div class="col-md-10 ">
-    <h2> Mis Inscripciones </h2>
-      <a th:href="@{/curso/listaCursos}" id="curso" type="button" class="btn btn-info">Inscribirse a un curso</a>
-     <table class="table table-success table-striped">
+     <div class=" centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> Mis inscripciones</h1>
+    </div>
+    </div>
+     <div class="container centraar">
+      <a th:href="@{/curso/listaCursos}" id="curso" type="button" class="btn btn-secondary">INSCRIBIRSE A UN CURSO</a>
+     </div>
+     <table class="table table-success table-striped centraar">
      <tr>
      <th> Titulo</th>
      <th> Categoria</th>
