--- a/TrabajoFinal_Grupo18/src/main/resources/templates/estadoEmpleos.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/estadoEmpleos.html
@@ -11,8 +11,12 @@
   <header th:replace="/layouts/headerCiu::headerCiu"></header>
    
     <div class="row justify-content-center">
-    <div class="col-md-6 ">
-    <h2> Mis solicitudes</h2>
+    <div class="col-md-9 ">
+    <div class=" centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> Estado de mis Solicitudes</h1>
+    </div>
+    </div>
     <table class="table table-success table-striped">
      <tr>
   					<th > Nombre y Apellido </th>
