--- a/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
    <header th:replace="/layouts/header::header"></header> 
-
+<div class= "container margen">
  <h1> EMPLEOS Y OFERTAS LABORALES </h1>
+ </div>
 <div class= "centraar">
 <img th:src="@{/images/imagen.webp}" alt="imagen" height="250px">
 </div> 
