--- a/TrabajoFinal_Grupo18/src/main/resources/templates/inscripCurso.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/inscripCurso.html
@@ -4,13 +4,17 @@
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
 		<meta charset="utf-8">
-         <title>Inscripcion a Curso</title>
+         <title>Cursos</title>
 </head>
 <body>
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
     <div class="row justify-content-center">
     <div class="col-md-10 ">
-    <h2> Cursos </h2>
+     <div class=" centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1>Cursos</h1>
+    </div>
+    </div>
      
      <table class="table table-success table-striped">
      <tr>
