--- a/TrabajoFinal_Grupo18/src/main/resources/static/css/style.css
+++ b/TrabajoFinal_Grupo18/src/main/resources/static/css/style.css
@@ -4,7 +4,10 @@
 	text-align: center;
     margin-top: 30px;
 }
-
+.margen{
+	margin-top: 70px;
+   	
+}
 a{
 	font-size: 18px;
 	font-family: cursive;
