--- a/TrabajoFinal_Grupo18/src/main/resources/templates/crearCv.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/crearCv.html
@@ -9,8 +9,15 @@
 <body>
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
 <div class="container">
-<div class="row justify-content-center mt-5 pt-5">
-  <h2>Mi Curriculum Vitae</h2>
+    <div class="container centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> Mi Curriculum Vitae</h1>
+    </div>
+    </div>
+  
+<div class="row justify-content-center mt-3 pt-3">
+
+  
    <form th:action="@{/ciudadano/modificar}" method="post" th:object="${curriculum}" class="row g-3">
   
   <div class="col-md-6">
@@ -46,16 +53,16 @@
   <div class="col-md-6">
    <label for="inputIdiomas2" class="form-label">Conocimientos informaticos:</label>
     <div class="form-check form-check">
-  <input th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <input th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" th:value="Basico">
   <label class="form-check-label" for="inlineRadio1">Basico</label>
   
 </div>
 <div class="form-check form-check">
-  <input  th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <input  th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" th:value="Intermedio">
   <label class="form-check-label" for="inlineRadio2">Intermedio</label>
 </div>
 <div class="form-check form-check">
-  <input  th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <input  th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" th:value="Avanzado">
   <label class="form-check-label" for="inlineRadio3">Avanzado </label>
 </div>
                 <div class=text-danger th:if="${#fields.hasErrors('conocimientoInfo')}" th:errors="*{conocimientoInfo}"></div>  
