--- a/TrabajoFinal_Grupo18/src/main/resources/templates/misEmpleos.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/misEmpleos.html
@@ -11,7 +11,7 @@
    <div class="row justify-content-center">
              
    
-    <div class="col-md-10 ">
+    <div class="col-md-12 ">
    <div class="container centraar">
     <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
         <h1> Mis Ofertas </h1>
@@ -32,6 +32,7 @@
   					<th >REQUISITOS</th>
   					<th >SALARIO</th>
   					<th >BENEFICIOS</th>
+  					<th> FECHA DE PUBLICACION</th>
   					<th >DISPONIBLE</th>
   					<th> OPCIONES</th>
      </tr>
@@ -45,6 +46,7 @@
 					 <td th:text="${o.requisitos}"></td>
 					 <td th:text="${o.salario}"></td>
 					 <td th:text="${o.beneficios}"></td>
+					 <td th:text="${o.fechaCreacion}"> </td>
 					 <td><span th:if="${o.disponible == true }" th:text="'Si'"> </span>
 					  <span th:if="${o.disponible == false }" th:text="'No'"></span></td>
 					 <td> 
