--- a/TrabajoFinal_Grupo18/src/main/resources/templates/pagCiudadano.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/pagCiudadano.html
@@ -9,16 +9,16 @@
 <body>
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
 
- 
-    <div class="card bg-dark text-white">
-  <img th:src="@{/images/img.jpg}" class="card-img" alt="fondo" height="300px">
-  <div class="card-img-overlay">
-    <h2 class="card-title">OFERTAS LABORALES</h2>
-    <h4 class="centraar">Bienvenido/a!!</h4> 
-    <p class="card-text"> Gracias por su registro. En este sitio podra encontrar el empleo que esta buscando.<br>
-     Antes de postularse a un empleo, debera crear su cv para que los empleadores puedan ver su perfil.</p>
-  </div>
-</div>
+    
+    <div class="container centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> BIENVENIDO/A </h1>
+    </div>   
+   </div>
+     <div class="container centraar">
+    <h5  class="card-text"> Gracias por su registro. En este sitio podra encontrar el empleo que esta buscando.<br>
+     Antes de postularse a un empleo, debera crear su cv para que los empleadores puedan ver su perfil.</h5>
+    </div>
   <section>
    <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
