--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verCV.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verCV.html
@@ -10,32 +10,27 @@
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
    
       <div class=container> 
+               <div class="row justify-content-center centraar">
           
      
-          <div class="card">
-            <div class="card-body">
-              <blockquote class="blockquote mb-1">
+          <div class="col-md-7 ">
+       
+        <div>
+        <h1 th:text= "${cv.nombre}"></h1>
+        </div>
+      
+       <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Educacion : <a th:text= "${cv.educacion}"> </a></div>
+       <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Idiomas : <a  th:text= "${cv.idiomas}"> </a></div>
+       <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Nivel de Conocimientos Informaticos : <a  th:text= "${cv.conocimientoInfo}"> </a></div>
+       <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Contacto : <a  th:text= "${cv.contacto}"> </a></div>
+       <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Informacion Adicional : <a  th:text= "${cv.infoComplementaria}"> </a></div>
+       <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Experiencia Laboral : <a  th:text= "${cv.expLaboral}"> </a></div>
                 
-            
-               <div class="card bg-dark text-dark">
-                 <img height="350px" th:src="@{/images/empleo1.png}" title="empleo" alt="empleo" />
-                  <div class="card-img-overlay">
-                    <h1 th:text= "${cv.nombre}"></h1>
-                  </div>
-               </div> 
-                
-                 <section> <h4>Experiencia Laboral:</h4> <a  th:text= "${cv.expLaboral}"> </a> </section> 
-                 <section> <h4>Educacion: </h4> <a  th:text= "${cv.educacion}"> </a> </section> 
-                 <section> <h4>Idiomas:</h4> <a  th:text= "${cv.idiomas}"> </a> </section> 
-                 <section> <h4>Informacion Complementaria: </h4><a  th:text= "${cv.infoComplementaria}"> </a> </section> 
-                 <section> <h4>Contacto: </h4> <a  th:text= "${cv.contacto}"> </a>  </section> 
-                 
-                
-             </blockquote>
+          
           </div>
          </div>
          
-        </div>
+       </div>
        
    <footer th:replace="/layouts/footer::footer"></footer>
 </body>
