--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
@@ -1,79 +1,81 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
 		<meta charset="utf-8">
-<title>Ofertas Laborales</title>
+    <title>EMPLEOS</title>
 </head>
 <body>
   <header th:replace="/layouts/headerCiu::headerCiu"></header>
    
-    <div class="card bg-dark text-white">
-  <img th:src="@{/images/img.jpg}" class="card-img" alt="fondo" height="300px">
-  <div class="card-img-overlay">
-    <h2 class="card-title">OFERTAS LABORALES</h2>
-    <h4 class="centraar">Bienvenido/a!!</h4> 
-    <p class="card-text"> ofertas laborales disponibles</p>
-  </div>
-</div>
-  <div class="container">
-<div class="row justify-content-center mt-5 pt-5">
-<a th:href="@{/ciudadano/verOfertasLaborales}" class="btn btn-dark" role="button">Mostrar Todos</a>
+       <div class="container centraar">
+    <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+        <h1> Ofertas Laborales</h1>
+    </div>
+    </div>
+  <div class=" container centraar">
+  <div class="row justify-content-center mt-3 pt-3">  
   
-  <form class="form-inline col-6" th:action="@{/ciudadano/filtrarxProvincia}" >
+    <section>
+   <div class="row row-cols-2 row-cols-md-3 g-6">
+  
+    <div class="card" style="width: 23rem;">
+      <div class="card-body">
+            
+        <div class="shadow-lg p-1 mb-4 bg-body rounded text-dark bg-opacity-25">
+         <h3> F I L T R A R </h3>
+        </div>
+
+  <form class="form-inline col-12" th:action="@{/ciudadano/filtrarxProvincia}" >
   <div class="form-group mb-2">
     <label for="provincia" class="form-label">Filtrar por provincia: </label>
   </div>  
     <div class="form-group mx-sm3 mb-2">
      <input type="text" name="provincia" class="form-control" id="provincia" th:value="${provincia}" placeholder="Ingrese una provincia." required> 
     </div>
-    <input type="submit" class="btn btn-info mb-2" value="filtrar">
+    <input type="submit" class="btn btn-secondary mb-2" value="FILTRAR">
      &nbsp;&nbsp;
    </form>
   
+   <form class="form-inline col-12" th:action="@{/ciudadano/filtrarxFecha}" >
+  <div class="form-group mb-2">
+    <label for="fecha" class="form-label">Filtrar por Fecha: </label>
+  </div>  
+    <div class="form-group mx-sm3 mb-2">
+     <input type="date" name="fecha" class="form-control" id="fecha" th:value="${fecha}" placeholder="Ingrese una fecha." required> 
+    </div>
+    <input type="submit" class="btn btn-secondary mb-2" value="FILTRAR">
+     &nbsp;&nbsp;
+   </form>
    
+      </div>
+      <div class="card-footer">
+         <a th:href="@{/ciudadano/verOfertasLaborales}" class="btn btn-primary" role="button">Mostrar Todos</a>
+      </div> 
+    </div>
+        
+        
+  <div th:each="o:${ofertas}" class="col">         
+   <div class="card" style="width: 23rem;">
+      <img th:src="@{/images/empleo1.png}" class="card-img-top" alt="empleo" height="200px">
+      <div class="card-body">
+        <h5 th:text="${o.puestoReq}" class="card-title"></h5>
+                <div class="shadow-lg p-3 mb-5 bg-body rounded text-dark bg-opacity-25"> Resumen del Puesto : <a  th:text= "${o.resumenPuesto}"> </a></div>
+         <div class="card-footer">
+         <a th:href="@{/ciudadano/empleo?id={id}(id=${o.id})}" id="oferta" type="button" class="btn btn-dark">Ver Empleo</a>
+         </div>    
+      </div>
+    </div>
+  </div>
+
+</div>
+     
+   </section>
    
    </div>
-  </div>
-    
-    <div class="row justify-content-center">
-    <div class="col-md-11 ">
-    <h2> Encontradas: </h2>
-    <table class="table table-success table-striped">
-     <tr>
-  					<th >CANTIDAD VACANTES</th>
-  					<th >PUESTO REQUERIDOS</th>
-  					<th >RESUMEN PUESTO</th>
-  					<th >DISPONIBILIDAD HORARIA</th>
-  					<th >PRINCIPALES TAREAS</th>
-  					<th >JORNADA</th>
-  					<th >REQUISITOS</th>
-  					<th >SALARIO</th>
-  					<th >BENEFICIOS</th>
-  					<th >DISPONIBLE</th>
-  					<th> OPCIONES</th>
-     </tr>
-     <tr th:each="o:${ofertas}">
-                     <td th:text="${o.cantVacantes}"></td> 
-					 <td th:text="${o.puestoReq}"></td>
-					 <td th:text="${o.resumenPuesto}"></td>
-					 <td th:text="${o.dispHoraria}"></td>
-					 <td th:text="${o.princTareas}"></td>
-					 <td th:text="${o.jornada}"></td>
-					 <td th:text="${o.requisitos}"></td>
-					 <td th:text="${o.salario}"></td>
-					 <td th:text="${o.beneficios}"></td>
-					 <td><span th:if="${o.disponible == true }" th:text="'Si'"> </span>
-					  <span th:if="${o.disponible == false }" th:text="'No'"></span></td>
-					 <td> 
-					   <a  th:href="@{/ciudadano/postularse/}+${o.id}" id="Postularse" type="button" class="btn btn-info">Postularse</a>
-					  </td>
- 				</tr>
-     </table>
     </div>
-    </div>
+   
    <footer th:replace="/layouts/footer::footer"></footer>
 </body>
 </html>
