--- a/TrabajoFinal_Grupo18/bin/src/main/resources/templates/misEmpleos.html
+++ b/TrabajoFinal_Grupo18/bin/src/main/resources/templates/misEmpleos.html
@@ -40,7 +40,7 @@
 					 <td><span th:if="${o.disponible == true }" th:text="'Si'"> </span>
 					  <span th:if="${o.disponible == false }" th:text="'No'"></span></td>
 					 <td> 
-					   <a th:href="@{/editarEmpleo}+${o.id}" id="edit" type="button" class="btn btn-dark">Editar</a>
+					   <a th:href="@{#}" id="edit" type="button" class="btn btn-dark">Editar</a>
 					   <a th:href="@{#}" id="elim" type="button" class="btn btn-danger">Eliminar</a>
 					  </td>
  				</tr>
