--- a/TrabajoFinal_Grupo18/src/main/resources/templates/misEmpleos.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/misEmpleos.html
@@ -41,7 +41,7 @@
 					  <span th:if="${o.disponible == false }" th:text="'No'"></span></td>
 					 <td> 
 					   <a th:href="@{/empleador/editarEmpleo/}+${o.id}" id="edit" type="button" class="btn btn-dark">Editar</a>
-					   <a th:href="@{#}" id="elim" type="button" class="btn btn-danger">Eliminar</a>
+					   <a th:href="@{/empleador/eliminarEmpleo/}+${o.id}" id="elim" type="button" class="btn btn-danger">Eliminar</a>
 					  </td>
  				</tr>
      </table>
