--- a/TrabajoFinal_Grupo18/src/main/resources/templates/nuevoCurso.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/nuevoCurso.html
@@ -23,25 +23,25 @@
  <form class="row g-3 " autocomplete="off" th:action="@{/curso/guardarCurso}" th:object="${curso}" method="post">
   <div class="col-md-6 position-relative">
     <label for="idNombre" class="form-label">Nombre del curso: </label>
-    <input th:field=*{nombre} type="text" class="form-control" id="idNombre" placeholder="Ingrese nombre del curso">
+    <input th:field=*{nombre} type="text" class="form-control" id="idNombre" placeholder="Ingrese nombre del curso" required>
     <div class=text-danger th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div> 
      
   </div>
   <div class="col-md-6 position-relative">
     <label for="CategoriaId" class="form-label">Categoria: </label>
-    <input th:field=*{categoria} type="text" class="form-control" id="CategoriaId" placeholder="Ingrese categoria"> 
+    <input th:field=*{categoria} type="text" class="form-control" id="CategoriaId" placeholder="Ingrese categoria" required> 
     <div class=text-danger th:if="${#fields.hasErrors('categoria')}" th:errors="*{categoria}"></div> 
   </div>
   
   <div class="col-md-6 position-relative">
     <label for="fechaIncId" class="form-label">Fecha de Inicio: </label>
-    <input th:field=*{fechaInic} type="date" class="form-control" id="fechaIncId" placeholder="Ingrese fecha de inicio ">
+    <input th:field=*{fechaInic} type="date" class="form-control" id="fechaIncId" placeholder="Ingrese fecha de inicio " required>
     <div class=text-danger th:if="${#fields.hasErrors('fechaInic')}" th:errors="*{fechaInic}"></div> 
   </div>
   
   <div class="col-md-6 position-relative">
     <label for="dictadorId" class="form-label">Dictado por: </label>
-    <input th:field=*{dictador} type="text" class="form-control" id="dictadorId" placeholder="Ingrese el nombre de su empresa.">
+    <input th:field=*{dictador} type="text" class="form-control" id="dictadorId" placeholder="Ingrese el nombre de su empresa." required>
     <div class=text-danger th:if="${#fields.hasErrors('dictador')}" th:errors="*{dictador}"></div> 
   </div>
   
