--- a/TrabajoFinal_Grupo18/src/main/resources/templates/registroEmpleador.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/registroEmpleador.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <header th:replace="/layouts/header::header"></header> 
- 
+   
 <div class="container">
 <div class="row justify-content-center mt-5 pt-5">
 <div class="col-md-10 ">
@@ -98,7 +98,8 @@
 </div>
 </div> 
 </div>
-
+          <div th:if="${param.error}" class="alert alert-danger" role="alert"> El usuario ya existe.</div>
+   
   <footer th:replace="/layouts/footer::footer"></footer>  
 </body>
 </html>
