--- a/src/main/resources/templates/layouts/headerCiu.html
+++ b/src/main/resources/templates/layouts/headerCiu.html
@@ -23,8 +23,8 @@
         <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
         <a class="nav-link " th:href="@{/ciudadano/verOfertasLaborales}">Ver Empleos</a>
         <a class="nav-link " th:href="@{/ciudadano/misPostulaciones}">Mis postulaciones</a>
-        <a class="nav-link " th:href="@{/curso/listaCursos}">Inscribirse a un curso</a>
-        <a class="nav-link " th:href="@{/curso/cursosInscripciones}">Mis cursos</a>
+        <a class="nav-link " th:href="@{/curso/cursosInscripciones}">Inscribirse a un curso</a>
+        <a class="nav-link " th:href="@{/curso/listaCursos}">Mis cursos</a>
         <form th:action="@{/logout}" method="post" class="nav justify-content-end">
 					<button class="btn btn-outline-dark" type="submit" value="Salir">
 						Cerrar Sesion
